# ZerroliteSFML

./: .gitignore  CMakeLists.txt  README.md  draw_arc.cpp  main.cpp  rounded_button_pattern.cpp  scenes.cpp  scenes.h
ZSB/: Game.cpp  Game.h  Player.cpp  Player.h  Scenes.cpp  Scenes.h  zsb.h
libs/SFML-2.5.1/doc/html/: ContextSettings_8hpp_source.html  annotated.html  (+96 more)
resources/config/: window.json
resources/languages/: en.lang  ru.lang
resources/sprites/: 1.py  animation_durations.json  animation_repeatable.json  offsets.json
zerrolite/: zerrolite.h
zerrolite/include/: Entity.h  GameCore.h  Scene.h  types.h
zerrolite/include/Containers/: Container.h  Grid.h
zerrolite/include/Core/: Actor.h  Animation.h  Entity.h  GameCore.h  GlobalDataStorage.h  MainActor.h  NPC.h  Player.h  Scene.h
zerrolite/include/GUI/: Button.h  CheckBox.h  Image.h  Text.h  btn.h  txt.h
zerrolite/include/Shapes/: ArcShape.h
zerrolite/include/Styles/: ButtonStyle.h  CheckBoxStyle.h  TextStyle.h
zerrolite/include/Tools/: ConfigManager.h  FileManager.h  LanguageManager.h
zerrolite/srcs/: Entity.cpp  GameCore.cpp  Scene.cpp
zerrolite/srcs/Containers/: Container.cpp  Grid.cpp
zerrolite/srcs/Core/: Actor.cpp  Animation.cpp  Entity.cpp  GameCore.cpp  GlobalDataStorage.cpp  MainActor.cpp  NPC.cpp  Player.cpp  Scene.cpp
zerrolite/srcs/GUI/: Button.cpp  CheckBox.cpp  Image.cpp  Text.cpp
zerrolite/srcs/Shapes/: ArcShape.cpp
zerrolite/srcs/Styles/: ButtonStyle.cpp  CheckBoxStyle.cpp  TextStyle.cpp
zerrolite/srcs/Tools/: ConfigManager.cpp  FileManager.cpp  LanguageManager.cpp
(+18 files in other folders)
